--- a/supa.css
+++ b/supa.css
@@ -57,7 +57,7 @@ p {
 body {
 background-image: url('fondu.JPEG');
 background-repeat: no-repeat;
-background-color :#a816ff;
+background-color :#black;
 background-attachment: fixed;
 background-size: cover;
 background-repeat: no-repeat;
